pageable + refacto